[gd_scene load_steps=3 format=3 uid="uid://ig5ou07dnnf2"]

[ext_resource type="Script" path="res://scripts/countdown.gd" id="2_mx6wt"]

[sub_resource type="LabelSettings" id="LabelSettings_7a0kv"]
font_size = 128
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[node name="Countdown" type="Label"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 61.0
offset_top = 49.0
offset_right = -63.0
offset_bottom = 189.0
grow_horizontal = 2
text = "None"
label_settings = SubResource("LabelSettings_7a0kv")
horizontal_alignment = 1
autowrap_mode = 1
script = ExtResource("2_mx6wt")

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="VanishTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="VanishTimer" to="." method="_on_vanish_timer_timeout"]
